# app-trader-shawn

./: .env.example  .gitignore  README.md  pyproject.toml
config/: app.yaml  providers.yaml  risk.yaml  symbols.yaml
docs/superpowers/plans/: 2026-04-20-ibkr-credit-spread-autotrader.md  2026-04-20-manage-live-position-reconstruction.md  2026-04-21-war-room-ui.md
docs/superpowers/specs/: 2026-04-20-ibkr-credit-spread-autotrader-design.md  2026-04-20-manage-live-position-reconstruction-design.md  2026-04-21-war-room-ui-design.md
src/trader_shawn/: __init__.py  app.py  scheduler.py  settings.py
src/trader_shawn/ai/: base.py  claude_cli_adapter.py  codex_adapter.py  decision_parser.py  service.py
src/trader_shawn/automation/: __init__.py  runner.py
src/trader_shawn/candidate_builder/: credit_spread_builder.py  paper_watchlist_builder.py
src/trader_shawn/domain/: __init__.py  enums.py  models.py
src/trader_shawn/events/: earnings_calendar.py
src/trader_shawn/execution/: ibkr_executor.py  order_builder.py
src/trader_shawn/market_data/: ibkr_market_data.py  quote_collector.py
src/trader_shawn/monitoring/: __init__.py  audit_logger.py  dashboard_api.py  quote_snapshot_store.py  state_store.py
src/trader_shawn/positions/: manager.py
src/trader_shawn/risk/: guard.py  rules.py
src/trader_shawn/war_room/: __init__.py  commands.py  models.py  service.py  web.py
src/trader_shawn/war_room/static/: war_room.css  war_room.js
tests/integration/: test_ai_service.py  test_cli_commands.py  test_trade_cycle.py  test_war_room_api.py  test_war_room_ui.py
tests/unit/: test_ai_adapters.py  test_ai_decision_parser.py  test_automator.py  test_candidate_builder.py  test_decision_parser.py  test_ibkr_transport.py  test_paper_watchlist_builder.py  test_position_manager.py  test_pyproject_packaging.py  test_quote_snapshot_store.py  test_risk_guard.py  test_settings.py  test_war_room_commands.py  test_war_room_service.py
(+1 files in other folders)
