[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trader-shawn"
version = "0.1.0"
description = "Bootstrap for Trader Shawn settings and configuration."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1,<9",
    "fastapi>=0.115,<1",
    "ib_insync>=0.9.86,<1",
    "jinja2>=3.1,<4",
    "pydantic>=2.7,<3",
    "pyyaml>=6.0.1,<7",
    "uvicorn>=0.30,<1",
]

[project.scripts]
trader-shawn = "trader_shawn.app:main"

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1",
    "pytest>=8.2,<9",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"trader_shawn.war_room" = ["templates/*.html", "static/*.css", "static/*.js"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
